--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- You can change the theme colors from here -->
+    <link  id="tema" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
